# informatica2_20251

./: .gitignore
practica1/: CMakeLists.txt  main  main.cpp
practica2/: CMakeLists.txt  main.cpp
practica2/amigables/: amigables.ino
practica2/include/: main.h
practica2/lcd/: lcd.ino
practica2/monedas/: monedas.ino
practica3/: CMakeLists.txt
practica3/include/: app.h  lib_cypher_decipher.hpp  lib_int_to_bin.hpp
practica3/src/: CMakeLists.txt  app.cpp  lib_binary_numbers.cpp  lib_cypher_decipher.cpp  main.cpp
practica3_2/: CMakeLists.txt
practica3_2/include/: app.hpp  app_cajero.hpp  lib_int_to_bin.hpp
practica3_2/src/: CMakeLists.txt  app.cpp  app_cajero.cpp  main.cpp
practica5/practica5/: CMakeLists.txt  constants.h  game_widget.cpp  game_widget.h  mainwindow.cpp  map.h  pacman.cpp  pacman.h  resources.qrc
practica6/: CMakeLists.txt  archivo.qrc  bodies.txt  body.cpp  body.h  body_item.cpp  body_item.h  mainwindow.cpp  mainwindow.h  system.cpp  system.h  system_widget.cpp  system_widget.h
practica_4/: CMakeLists.txt
practica_4/include/: app.hpp  network.hpp  router.hpp  usuario.hpp
practica_4/src/: CMakeLists.txt  app.cpp  main.cpp  network.cpp  router.cpp
